# copo-tracer

./: CMakeLists.txt  README
samples/projector/: projector.cxx
samples/scenes/: default.h
samples/simple/: simple.cxx
src/common/: checkerboard_pattern.h  colorize.h  file_utils.h  graycode_pattern.h  image_denoising.h  image_inpainting.h  image_io.h  image_utils.h  mat.h  math_utils.h  on_off_pattern.h  phaseshift_pattern.h  progress.h  random_utils.h  rasterizer_2d.h  sampler_2d.h  svd.h  timing.h  tiny_mat.h  tiny_vec.h  triangle_pattern.h  union_find.h  variational_graycode.h  vec.h
src/raytracer/: blinn_phong.cxx  blinn_phong.h  box.cxx  box.h  camera.cxx  camera.h  cg_camera.cxx  cg_camera.h  cylinder.cxx  cylinder.h  directional_light.cxx  directional_light.h  intersection_info.cxx  intersection_info.h  kd_tree.cxx  kd_tree.h  light_source.cxx  light_source.h  main.cxx  material.cxx  material.h  obj_reader.h  phong.cxx  phong.h  plane.cxx  plane.h  point_light.cxx  point_light.h  primitive.cxx  primitive.h  primitive_group.cxx  primitive_group.h  projector_light.cxx  projector_light.h  ray.h  raytracer.cxx  raytracer.h  raytracer.sln  raytracer.vcxproj  scene.cxx  (+12 more)
